@@ -1,5 +1,14 @@
 2011-12-13  Anders Carlsson  <andersca@apple.com>
 
+        Try to fix the Windows build.
+
+        Remove the callOnMainThread overload that takes a WTF::Function since it's not being used.
+
+        * wtf/MainThread.cpp:
+        * wtf/MainThread.h:
+
+2011-12-13  Anders Carlsson  <andersca@apple.com>
+
         Add a very bare-bones implementation of bind and Function to WTF
         https://bugs.webkit.org/show_bug.cgi?id=74462
 
